@@ -363,5 +363,15 @@ public:
         @since 2.9.0
     */
     void UseAppInfo(int info);
+
+protected:
+    /**
+        Protected default constructor.
+
+        This constructor is protected in order to prevent creation of objects
+        of this class as Get() should be used instead to access the unique
+        global wxStandardPaths object of the correct type.
+     */
+    wxStandardPaths();
 };
 
